--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,8 @@
 
 .mapboxgl-map{
 	
-	width: 80vmin;
-	height: 80vmin;
+	width: 100%;
+	height: 100%;
 	align-self: center;
 	
 }
@@ -41,7 +41,8 @@
 .HzFlex{
 	display: flex;
 	flex-direction: row;
-	width: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .HzFlexChild{
