COMPX341-20 A4 VERSION 2 - Revision 1
+ Clicking on an existing map marker will load information for that markers coordinates rather than placing a new marker
* Markers should appear when searching for cities now

--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,17 @@
   padding: 2px;
 }
 
+.mapboxgl-marker:hover{
+  border: red 1px solid;
+}
+
+.map_marker{
+  background-color: black;
+  width: 10px;
+  height: 10px;
+  border-radius: 4px;
+  border-color: white;
+  border-width: 1px;
+  border-style: solid;
+  cursor: pointer;
+}
